# chat_server

./: CMakeLists.txt  chat_client.c  chat_server.c
include/: common.h  server_api.h  status.h
src/: CMakeLists.txt  chat_client.c  chat_server.c  client_api.c  client_api.h  common.c  server_api.c
